# eldercare

./: .env.example  .gitignore  ACCESSIBILITY_MOBILE_QA_CHECKLIST.md  BACKEND_FRONTEND_CONTRACT_MAP.md  BOOTSTRAP.md  DEPLOYMENT.md  FRONTEND_INTEGRATION.md  LAUNCH_READINESS_CHECKLIST.md  MODULE_ROADMAP.md  README.md  SESSION_SUMMARY.md  SPRINT_TASKS.md  TODO.md  api versioning.md  backendmodule.md  db.md  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml  frontend.md  infra.md  package-lock.json  pyrightconfig.json  security.md  structure.md  websocket.md  worker.md
apps/api/: Dockerfile  pyproject.toml
apps/api/src/: app.py  config.py  di.py  exceptions.py  health.py  logging_config.py  metrics.py  tracing.py
apps/api/src/core/: logging.py  secrets.py  security.py  settings.py
apps/api/src/eldercare_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
apps/api/src/middleware/: audit.py  auth.py  consent.py
apps/api/src/shared/: kernel.py
apps/api/tests/: test_audit_m06.py  test_auth_flows.py  test_bootstrap.py  test_consent_m04.py  test_family_domain.py  test_health.py  test_health_m05.py  test_medication_m08.py  test_notifications_m07.py  test_observability.py  test_phase10_marketplace.py  test_phase11_consent.py  test_phase12_audit.py  test_phase13_subscriptions.py  test_phase14_admin_dashboard.py  test_phase2.py  test_phase3.py  test_phase4.py  test_phase5_security.py  test_phase8_notifications.py  test_phase9_sos.py  test_realtime_presence_topics.py  test_shared_kernel.py  test_websocket_flows.py
apps/web/: Dockerfile  (+6 more)
(+241 files in other folders)
